events and listeners

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 
   <div class="red-square"></div>
 
+  <ul>
+    <li class="js-target">Unchanged</li>
+    <li class="js-target">Unchanged</li>
+    <li>Won't change</li>
+    <li class="js-target">Unchanged</li>
+    <li>Won't change</li>
+    <li class="js-target">Unchanged</li>
+  </ul>
+
+  <button id="event-button">Click me!</button>
+
+  <input type="text" placeholder="type into me!" id="input-to-copy">
+  <p id="p-to-copy-to">Nothing has happened yet.</p>
+
   <script src="./experiments.js"></script>
 </body>
 </html>
