complete: events and listeners

--- a/index.html
+++ b/index.html
@@ -23,8 +23,26 @@
 
   <button id="event-button">Click me!</button>
 
+  <br><br>
+
   <input type="text" placeholder="type into me!" id="input-to-copy">
   <p id="p-to-copy-to">Nothing has happened yet.</p>
+  
+  <br><br>
+
+  <div class="color-box"></div>
+  <input type="text" placeholder="Type a color here!" class="color-input">
+
+  <br><br>
+
+  <!-- Event bubbling -->
+  <div id="button-container">
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+  </div>
 
   <script src="./experiments.js"></script>
 </body>
